# bitcrab

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo.toml  rustfmt.toml
.github/workflows/: ci.yml
cmd/bitcrab/: Cargo.toml  cli.rs  lib.rs  main.rs
cmd/bitcrab/initializers/: mod.rs  p2p.rs  rpc.rs  storage.rs
cmd/monitor/: Cargo.toml  main.rs
crates/cli/: cargo.toml  main.rs
crates/cli/src/: main.rs
crates/common/: cargo.toml  lib.rs
crates/common/types/: amount.rs  block.rs  coin.rs  constants.rs  flat_file_pos.rs  hash.rs  magic.rs  mod.rs  script.rs  transaction.rs  undo.rs
crates/common/wire/: decode.rs  encode.rs  error.rs  mod.rs
crates/consensus/: Cargo.toml  chain_manager.rs  chainstate.rs  coins.rs  lib.rs  validation.rs  validator.rs
crates/net/: Cargo.toml  cargo.toml  lib.rs
crates/net/p2p/: actor.rs  addr_man.rs  codec.rs  connection.rs  discovery.rs  dispatcher.rs  errors.rs  initiator.rs  message.rs  metrics.rs  mod.rs  network.rs  peer.rs  peer_manager.rs  peer_table.rs  sync.rs  tests.rs
crates/net/p2p/messages/: addr.rs  block.rs  getdata.rs  getheaders.rs  headers.rs  inv.rs  mod.rs  ping.rs  verack.rs  version.rs
crates/net/p2p/sync/: blocks.rs  headers.rs  mod.rs
crates/net/rpc/: Cargo.toml  lib.rs  rpc.rs  types.rs  utils.rs
crates/net/rpc/blockchain/: mod.rs
crates/net/rpc/net/: mod.rs
crates/net/rpc/src/: context.rs  lib.rs
crates/net/rpc/src/methods/: blockchain.rs  mod.rs  network.rs
crates/node/: Cargo.toml  cargo.toml  lib.rs  node.rs
crates/node/consensus/: chain_manager.rs  coins_view.rs  mod.rs  validator.rs
crates/script/: Cargo.toml  interpreter.rs  lib.rs  opcode.rs  stack.rs
crates/storage/: Cargo.toml  block_file.rs  error.rs  lib.rs  store.rs  worker.rs
crates/storage/api/: mod.rs  tables.rs
crates/storage/backend/: in_memory.rs  mod.rs  rocksdb.rs
docs/: architecture.md
docs/specs/: storage.md
docs/specs/consensus/: validation.md
docs/specs/network/: p2p.md  rpc.md
docs/specs/transactions/: utxo.md
test/: Cargo.toml
test/tests/: functional_p2p.rs  repro_false_positive.rs  rpc_integration.rs  tests.rs
test/tests/node/: consensus_sync.rs  mod.rs  node_tests.rs
test/tests/p2p/: backend_tests.rs  mock.rs  mod.rs  net_p2p_codec.rs  net_p2p_messages.rs  net_p2p_messages_addr.rs  net_p2p_peer_table.rs  p2p_protocol_errors.rs  test_p2p_handshake.rs  types_tests.rs
test/tests/storage/: backends.rs  block_file.rs  integration.rs  mod.rs  storage_persistence.rs
test/tests/types/: common_types_amount.rs  common_types_block.rs  common_types_block_validation.rs  common_types_constants.rs  common_types_hash.rs  common_types_script.rs  common_types_transaction.rs  common_types_transaction_validation.rs  mod.rs
test/tests/wire/: common_wire_decode.rs  common_wire_encode.rs  mod.rs
