[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/net",
    "crates/node",
    "crates/storage",
    "crates/net/rpc",
    "cmd/bitcrab",
    "cmd/monitor",
    "crates/script",
    "test"
]



default-members = ["cmd/bitcrab"]


[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.75"
license      = "MIT"

[workspace.dependencies]
# Internal
bitcrab-common = { path = "crates/common" }
bitcrab-net    = { path = "crates/net" }
bitcrab-node   = { path = "crates/node" }
bitcrab-storage= { path = "crates/storage", features = ["rocksdb"] }
bitcrab-script = { path = "crates/script" }
bitcrab-rpc    = { path = "crates/net/rpc" }


# External — all versions pinned
sha2               = "0.10.8"
ripemd             = "0.1.3"
hex                = "0.4.3"
thiserror          = "1.0.61"
tracing            = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
secp256k1          = { version = "0.29.0", features = ["recovery", "global-context"] }
tokio              = { version = "1.37.0", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "macros", "signal"] }
tokio-util         = { version = "0.7.11", features = ["rt"] }

clap               = { version = "4.5.4",  features = ["derive", "env"] }
bytes              = "1.6.0"
axum               = { version = "0.7.5", features = ["ws"] }
serde              = { version = "1.0.203", features = ["derive"] }
serde_json         = "1.0.117"


[profile.release]
opt-level = 3
lto       = "thin"

[profile.dev]
overflow-checks = true