[package]
name           = "bitcrab-net"
description    = "Bitcoin P2P wire protocol"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
bitcrab-common.workspace = true
bitcrab-storage.workspace = true
tokio.workspace          = true
bytes.workspace          = true
thiserror.workspace      = true
tracing.workspace        = true
rand                     = "0.8"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
bincode = "1.3.3"
hex = "0.4"

[dev-dependencies]
