[package]
name           = "bitcrab-node"
description    = "Chain state, block validation, UTXO set"
version.workspace      = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
bitcrab-common.workspace  = true
bitcrab-net.workspace     = true
bitcrab-storage.workspace = true
bitcrab-rpc.workspace     = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true