[package]
name = "bitcrab-storage"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
rustc-hash = "1.1.0"
tracing = "0.1"
thiserror = "1.0"
rocksdb = { version = "0.22.0", optional = true }
bitcrab-common = { path = "../common" }
paste = "1.0"

[features]
default = []
rocksdb = ["dep:rocksdb"]
