[package]
name = "bitcrab-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Internal
bitcrab-common = { workspace = true }
bitcrab-net    = { workspace = true }
bitcrab-storage= { workspace = true }

# External
axum.workspace       = true
serde.workspace      = true
serde_json.workspace = true
tokio.workspace      = true
tracing.workspace    = true
thiserror.workspace  = true
tower-http = { version = "0.5.2", features = ["full"] }
